# StereoVision

./: CMakeLists.txt
data/: left_cam_calib.xml  right_cam_calib.xml  stereo_calib.xml
include/: Config.h
src/: disparity.cpp  distance.cpp  snapshots.cpp  stereoRetification.cpp  stereoVisionCalibration.cpp
